<resources>
    <string name="facebook_app_id">341529946626279</string>
    <string name="fb_login_protocol_scheme">fb341529946626279</string>
    <string name="shared_pref">SHARED_PREF</string>
    <string name="shared_first_req">FIRST_REQ</string>
    <string name="shared_first_ad">FIRST_AD</string>
    <string name="shared_first_match">FIRST_MATCH</string>
    <string name="app_name">WannaBuy</string>
    <string name="please_enter">Please Enter</string>
    <string name="name_email">Name &amp; Email</string>
    <string name="email_header">Email ID</string>
    <string name="name_header">Full Name</string>
    <string name="continue_text">Continue</string>
    <string name="create_pass">Please create</string>
    <string name="your_pass">Your Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_text">Done</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_message">Message</string>
    <string name="title_ads">Ads</string>
    <string name="title_account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="login_to">Login to</string>
    <string name="user_already_registered">"The email address is already in use by another account."</string>
    <string name="HOME_FRAGMENT">HOME_FRAGMENT</string>
    <string name="ADS_FRAGMENT">ADS_FRAGMENT</string>
    <string name="MSG_FRAGMENT">MSG_FRAGMENT</string>
    <string name="PROF_FRAGMENT">PROF_FRAGMENT</string>
    <string name="search">Search</string>
    <string name="notify_text">Notifications</string>
    <string name="next">Next</string>
    <string name="BUY">Buy</string>
    <string name="RENT">Rent</string>
    <string name="SELL">Sell</string>
    <string name="what_do_you_want_to_do">Wanna: Buy/Rent</string>
    <string name="property_location">Property Location</string>
    <string name="property_type_header">What type of property needed?</string>
    <string name="residential"> Residential</string>
    <string name="commercial"> Commercial</string>
    <string name="industrial"> Industrial</string>
    <string name="institutional"> Institutional</string>
    <string name="pg_rent">PG(Rent)</string>
    <string name="rental_income">Rental Income</string>
    <string name="property_size_header">Choose the area of property</string>
    <string name="PROPERTY_TYPE">PROPERTY_TYPE</string>
    <string name="house"> House</string>
    <string name="villa"> Villa</string>
    <string name="apartments"> Apartments</string>
    <string name="land">Land</string>
    <string name="residential_land">Residential Land</string>
    <string name="rental_residential_land">Rental Residential Land</string>
    <string name="residential_building">Residential Building</string>
    <string name="residential_independent">Residential Independent</string>
    <string name="residential_apartments">Residential Apartments</string>
    <string name="rental_residential_independent">Rental Residential Independent</string>
    <string name="rental_residential_apartments">Rental Residential Apartments</string>
    <string name="pg_rent_independent">PG Rent Independent</string>
    <string name="commercial_land">Commercial Land</string>
    <string name="rental_commercial_land">Rental Commercial Land</string>
    <string name="commercial_building">Commercial Building</string>
    <string name="commercial_independent">Commercial Independent</string>
    <string name="rental_commercial_independent">Rental Commercial Independent</string>
    <string name="commercial_floorspace">Commercial Floorspace</string>
    <string name="rental_commercial_floorspace">Rental Commercial Floorspace</string>
    <string name="institutional_land">Institutional Land</string>
    <string name="rental_institutional_land">Rental Institutional Land</string>
    <string name="institutional_building">Institutional Building</string>
    <string name="institutional_independent">Institutional Independent</string>
    <string name="industrial_land">Industrial Land</string>
    <string name="rental_industrial_land">Rental Industrial Land</string>
    <string name="industrial_building">Industrial Building</string>
    <string name="industrial_independent">Industrial Independent</string>
    <string name="rental_industrial_independent">Rental Industrial Independent</string>
    <string name="industrial_floorspace">Industrial Floorspace</string>
    <string name="rental_industrial_floorspace">Rental Industrial Floorspace</string>
    <string name="rental_pg_independent">Rental PG Rent Independent</string>
    <string name="rental_pg_apartments">Rental PG Apartment</string>
    <string name="rental_farm_building">Rental Farm Building</string>
    <string name="rental_farm_land">Rental Farm Land</string>
    <string name="floorspace">FloorSpace</string>
    <string name="independent">Independent</string>
    <string name="office_space">  Office Space</string>
    <string name="showroom"> Showroom</string>
    <string name="rental_showroom">Rental Showroom</string>
    <string name="factory"> Factory</string>
    <string name="rental_factory">Renta Factory</string>
    <string name="warehouse"> Warehouse</string>
    <string name="rental_warehouse">Rental Warehouse</string>
    <string name="cold_storage">  Cold Storage</string>
    <string name="rental_cold_storage">Rental Cold Storage</string>
    <string name="hospital">Hospital</string>
    <string name="rental_hospital">Rental Hospital</string>
    <string name="school">School</string>
    <string name="rental_school">Rental School</string>
    <string name="college">College</string>
    <string name="rental_college">Rental College</string>
    <string name="bhk_header">How many Rooms?</string>
    <string name="one_bhk_text"> 1 BHK</string>
    <string name="two_bhk_text"> 2 BHK</string>
    <string name="three_bhk_text"> 3 BHK</string>
    <string name="four_bhk_text"> 4 BHK</string>
    <string name="five_bhk_text"> 5 BHK+</string>
    <string name="facing_header">Property Facing direction</string>
    <string name="east_text">East</string>
    <string name="west_text">West</string>
    <string name="south_text">South</string>
    <string name="north_text">North</string>
    <string name="furnished"> Fully Furnished</string>
    <string name="un_furnished">Warm shell</string>
    <string name="semi_furnished"> Semi Furnished</string>
    <string name="with_setup"> With Setup</string>
    <string name="without_setup"> Without Setup</string>
    <string name="new_text"> New</string>
    <string name="resale_text"> Resale</string>
    <string name="budget_header">Budget</string>
    <string name="ANY_QUERY">ANY_QUERY</string>
    <string name="LOCATION_QUERY">LOCATION_QUERY</string>
    <string name="TYPE_QUERY">TYPE_QUERY</string>
    <string name="BHK_QUERY">BHK_QUERY</string>
    <string name="BUDGET_QUERY">BUDGET_QUERY</string>
    <string name="USER_ID_QUERY">USER_ID_QUERY</string>
    <string name="POST_REQUIREMENT">POST_REQUIREMENT</string>
    <string name="POST_AD">POST_AD</string>
    <string name="LOADING">Loading...</string>
    <string name="wannasell">Wanna Sell</string>
    <string name="approval">Approval</string>
    <string name="amenities_header_text">Amenities(Select all applicable)</string>
    <string name="amenities_header">Amenities</string>
    <string name="metro_water">  Metro Water Connection</string>
    <string name="gym">  Gym</string>
    <string name="drainage_connection">  Drainage Connection</string>
    <string name="power_backup">  Power Backup</string>
    <string name="security_guard">  Security Guard</string>
    <string name="lift">  Lift</string>
    <string name="swimming_pool">  Swimming Pool</string>
    <string name="cafeteria">  Cafeteria</string>
    <string name="garden">  Garden</string>
    <string name="water">  24hrs Water</string>
    <string name="maintenance_fee">  Maintenance Fee</string>
    <string name="play_area">Children Play Area</string>
    <string name="approval_header">Type of Approval?</string>
    <string name="dtcp_text">DTCP</string>
    <string name="cmda_text">CMDA</string>
    <string name="rera_text">RERA</string>
    <string name="road_width">Road Width (in ft)</string>
    <string name="min_road_width">0Ft.</string>
    <string name="rent_end_header">Rental Property</string>
    <string name="rent_end_date_text">Rent End Date</string>
    <string name="rent_property_type_header">Rent Property</string>
    <string name="rent_advance_header">Advance/Deposit \u20B9</string>
    <string name="tenant_name">Name of the tenant(optional)</string>
    <string name="roi_text">ROI in (%) Per Year</string>
    <string name="investment_text">Investment  Price:</string>
    <string name="pets_allowed"> Pets Allowed</string>
    <string name="pets_not_allowed">Not Allowed</string>
    <string name="post_ad">Post Ad</string>
    <string name="ad_header">Wanna: Sell/Rent Out</string>
    <string name="ad_area_header">Your Area / Locality / City?</string>
    <string name="door_number">Door number</string>
    <string name="address_header_text">Address</string>
    <string name="area_header_text">Area</string>
    <string name="ad_property_type">Type Of Property</string>
    <string name="size_header">Choose the area of the Property</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="corner_plot_text">Corner Plot</string>
    <string name="how_many_rooms">How Many Rooms?</string>
    <string name="sell_type_text">New or Resale?</string>
    <string name="ads_furnised_header">What type of property?</string>
    <string name="ads_price_header">Price \u20B9 </string>
    <string name="non_negotiable">Non Negotiable</string>
    <string name="negotiable">Negotiable</string>
    <string name="upload_property_photo">Upload\nProperty\nPhoto</string>
    <string name="recent_search_header">Your Recent Searches</string>
    <string name="my_matches">My Matches</string>
    <string name="my_requirements">My Requirements</string>
    <string name="how_we_work">How We Work</string>
    <string name="looking_for_something_else">Looking for Something else?</string>
    <string name="post_your_property">Post Your Property</string>
    <string name="looking_for_rent">Looking For Rent?</string>
    <string name="are_you_builder">Are you Builder?</string>
    <string name="view_all">View All</string>
    <string name="details">Details</string>
    <string name="first_requirement">You have not posted Any Requirements</string>
    <string name="post_now">Post Now</string>
    <string name="first_ad">You have not Posted Any Ad</string>
    <string name="car_parking">Car Parking</string>
    <string name="covered_parking">Covered Parking</string>
    <string name="uncovered_parking">Unconvered Parking</string>
    <string name="not_present">Not Present</string>
    <string name="property_details_header">Property Details</string>
    <string name="covered_area">Covered Area</string>
    <string name="is_furnished">Is Furnished</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="chat">Chat</string>
    <string name="farm_land">Farm Land</string>
    <string name="no_of_cov_car_park">No.of Covered Parking</string>
    <string name="no_of_un_car_park">No.of Open Parking</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact">Contact Us</string>
    <string name="pg_rent_service_aparments">PG/Service Apartment</string>
    <string name="wanna_buy_text">Wanna Buy</string>
    <string name="wanna_rent_text">Wanna Rent</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="about_us">About Us</string>
    <string name="wanna_rent_out">Wanna Rent out</string>
</resources>