<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_user_account"
        android:title="@string/title_account"/>

    <item android:id="@+id/menu_my_matches"
        android:title="@string/my_matches"/>

    <item android:id="@+id/menu_my_requirements"
        android:title="@string/my_requirements"/>

    <item android:id="@+id/menu_wanna_buy"
        android:title="@string/wanna_buy_text"/>

    <item android:id="@+id/menu_wanna_rent"
        android:title="@string/wanna_rent_text"/>

    <item android:id="@+id/menu_wanna_sell"
        android:title="@string/wannasell"/>

    <item android:id="@+id/menu_wanna_rent_out"
        android:title="@string/wanna_rent_out"/>

    <item
        android:id="@+id/payment_information"
        android:title="Payments" />

    <item android:id="@+id/menu_how_we_work"
        android:title="@string/how_we_work"/>

    <item android:id="@+id/menu_privacy_policy"
        android:title="@string/privacy_policy"/>

    <item android:id="@+id/menu_terms_of_service"
        android:title="@string/terms_of_service"/>

    <item android:id="@+id/menu_contact_us"
        android:title="@string/contact"/>

    <item android:id="@+id/menu_about_us"
        android:title="@string/about_us"/>

    <item android:id="@+id/log_out"
        android:title="@string/log_out"/>

</menu>