<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PropertyType">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/type_property"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mode_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/RENT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/kind_of_property_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/property_type_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mode_header"
        app:layout_constraintTop_toBottomOf="@+id/mode_header" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kind_of_property_header">

        <RadioButton
            android:id="@+id/residential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="0dp"
            android:button="@drawable/custom_radio_button"
            android:checked="false"
            android:fontFamily="@font/montserrat_medium"
            android:onClick="radioButtonClicked"
            android:padding="5dp"
            android:text="@string/residential"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/commercial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="0dp"
            android:button="@drawable/custom_radio_button"
            android:fontFamily="@font/montserrat_medium"
            android:checked="false"
            android:onClick="radioButtonClicked"
            android:padding="5dp"
            android:text="@string/commercial"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/industrial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:button="@drawable/custom_radio_button"
            android:fontFamily="@font/montserrat_medium"
            android:checked="false"
            android:onClick="radioButtonClicked"
            android:padding="5dp"
            android:layout_marginStart="0dp"
            android:text="@string/industrial"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/instutional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="0dp"
            android:button="@drawable/custom_radio_button"
            android:fontFamily="@font/montserrat_medium"
            android:checked="false"
            android:onClick="radioButtonClicked"
            android:padding="5dp"
            android:text="@string/institutional"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/pg_rent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="0dp"
            android:button="@drawable/custom_radio_button"
            android:fontFamily="@font/montserrat_medium"
            android:checked="false"
            android:onClick="radioButtonClicked"
            android:padding="5dp"
            android:text="@string/pg_rent_service_aparments"
            android:visibility="gone"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/farm_land"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:visibility="gone"
            android:textSize="15sp"
            android:button="@drawable/custom_radio_button"
            android:onClick="radioButtonClicked"
            android:text="@string/farm_land"
            android:fontFamily="@font/montserrat_medium"/>


        <RadioButton
            android:id="@+id/rental_income_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="0dp"
            android:button="@drawable/custom_radio_button"
            android:fontFamily="@font/montserrat_medium"
            android:checked="false"
            android:onClick="radioButtonClicked"
            android:padding="5dp"
            android:text="@string/rental_income"
            android:textSize="15sp" />
    </RadioGroup>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/next"
        android:background="@drawable/orange_button"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />


</android.support.constraint.ConstraintLayout>