<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ads_facing_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/facing_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/facing_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ads_facing_header"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/north_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_radio_button"
            android:fontFamily="@font/montserrat_regular"
            android:onClick="onRadioButtonClicked"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/north_text" />

        <RadioButton
            android:id="@+id/south_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_radio_button"
            android:fontFamily="@font/montserrat_regular"
            android:onClick="onRadioButtonClicked"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/south_text" />

        <RadioButton
            android:id="@+id/west_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_radio_button"
            android:fontFamily="@font/montserrat_regular"
            android:onClick="onRadioButtonClicked"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/west_text" />

        <RadioButton
            android:id="@+id/east_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_radio_button"
            android:fontFamily="@font/montserrat_regular"
            android:onClick="onRadioButtonClicked"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/east_text" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>