<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Bhk">

    <ImageView
        android:id="@+id/bhk_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/bhk_property"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:id="@+id/bhk_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/RENT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <TextView
        android:id="@+id/bhk_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/bhk_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bhk_mode"
        app:layout_constraintTop_toBottomOf="@+id/bhk_mode" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bhk_header">

        <RadioButton
            android:id="@+id/one_bhk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="0dp"
            android:padding="5dp"
            android:button="@drawable/custom_radio_button"
            android:text="@string/one_bhk_text"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/two_bhk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="0dp"
            android:padding="5dp"
            android:button="@drawable/custom_radio_button"
            android:text="@string/two_bhk_text"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/three_bhk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="0dp"
            android:padding="5dp"
            android:button="@drawable/custom_radio_button"
            android:text="@string/three_bhk_text"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/four_bhk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="0dp"
            android:padding="5dp"
            android:button="@drawable/custom_radio_button"
            android:text="@string/four_bhk_text"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/five_bhk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="0dp"
            android:padding="5dp"
            android:button="@drawable/custom_radio_button"
            android:text="@string/five_bhk_text"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <Button
        android:id="@+id/bhk_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/orange_button"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/next"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

</android.support.constraint.ConstraintLayout>